--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -53,23 +53,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="8dp"
-                        android:text="To make sure the app works properly, please grant the following permissions:"/>
+                        android:text="To make sure the app works properly, please grant the following permissions:" />
 
                     <com.google.android.material.button.MaterialButton
                         style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-                        app:icon="@drawable/round_accessibility_new_24"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:onClick="onAccessibilityButtonPress"
-                        android:text="Grant Accessibility Permission"/>
+                        android:text="Grant Accessibility Permission"
+                        app:icon="@drawable/round_accessibility_new_24" />
 
                     <com.google.android.material.button.MaterialButton
                         style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-                        app:icon="@drawable/round_admin_panel_settings_24"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:onClick="onDeviceAdminButtonPress"
-                        android:text="Grant Device Admin Permission"/>
+                        android:text="Grant Device Admin Permission"
+                        app:icon="@drawable/round_admin_panel_settings_24" />
 
                 </LinearLayout>
 
@@ -77,33 +77,33 @@
 
             <com.google.android.material.card.MaterialCardView
                 style="@style/Widget.Material3.CardView.Filled"
-                app:cardCornerRadius="32dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginVertical="8dp"
-                android:layout_gravity="center">
+                app:cardCornerRadius="32dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:orientation="horizontal"
-                    android:padding="28dp"
-                    android:gravity="center">
+                    android:padding="28dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Start Officer"
-                        android:textSize="24sp"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:text="Enable Officer"
+                        android:textSize="24sp" />
 
                     <com.google.android.material.materialswitch.MaterialSwitch
                         android:id="@+id/officerSwitch"
-                        android:enabled="false"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"/>
+                        android:layout_weight="2"
+                        android:enabled="false" />
 
                 </LinearLayout>
 
@@ -111,4 +111,156 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/bottomLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.akruzen.officer.Views.WavyLineView
+            android:id="@+id/wavyLineView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:waveSeparation="70"
+            app:waveColor="@color/dynamic_primary"
+            app:waveBottomColor="@color/dynamic_primary"
+            app:waveStrokeWidth="1dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingHorizontal="16dp"
+            android:background="@color/dynamic_primary"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="About"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_launcher_foreground"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:textColor="@color/dynamic_light"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:text="Officer"/>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:clickable="false"
+                        android:text="@string/app_version"/>
+
+                </LinearLayout>
+                
+                <LinearLayout
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="20dp"
+                    android:background="@color/dynamic_light"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dynamic_light"
+                        android:text="Developed by"/>
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginVertical="16dp"
+                        app:srcCompat="@drawable/omkar_profile"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:textColor="@color/dynamic_light"
+                        android:text="Omkar Phadke"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/githubButton"
+                            android:onClick="onContactButtonPress"
+                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:icon="@drawable/github"/>
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/linkedInButton"
+                            android:onClick="onContactButtonPress"
+                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:icon="@drawable/linkedin"/>
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/discordButton"
+                            android:onClick="onContactButtonPress"
+                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:icon="@drawable/discord"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center"
+                android:textColor="@color/dynamic_light"
+                android:textSize="12sp"
+                android:text="Made with ❤️ in Pune, India"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
