--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
+        android:fillViewport="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <com.google.android.material.card.MaterialCardView
@@ -79,7 +80,7 @@
                 style="@style/Widget.Material3.CardView.Filled"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="top"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginVertical="8dp"
                 app:cardCornerRadius="32dp">
@@ -109,6 +110,14 @@
 
             </com.google.android.material.card.MaterialCardView>
 
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/clipartImageView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="32dp"
+                android:src="@drawable/officer_off" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -116,6 +125,8 @@
         android:id="@+id/bottomLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,25 +136,25 @@
             android:id="@+id/wavyLineView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            app:waveSeparation="70"
-            app:waveColor="@color/dynamic_primary"
             app:waveBottomColor="@color/dynamic_primary"
+            app:waveColor="@color/dynamic_primary"
+            app:waveSeparation="70"
             app:waveStrokeWidth="1dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:paddingHorizontal="16dp"
             android:background="@color/dynamic_primary"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="About"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:text="About"/>
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,16 +173,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_launcher_foreground"/>
+                        app:srcCompat="@drawable/ic_launcher_foreground" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:textColor="@color/dynamic_light"
                         android:layout_gravity="center"
+                        android:layout_marginBottom="8dp"
+                        android:text="Officer"
                         android:textAlignment="center"
-                        android:text="Officer"/>
+                        android:textColor="@color/dynamic_light" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/versionTextButton"
@@ -179,72 +190,72 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:clickable="false"
-                        android:text="1.0.0"/>
+                        android:text="1.0.0" />
 
                 </LinearLayout>
-                
+
                 <LinearLayout
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="20dp"
-                    android:background="@color/dynamic_light"/>
+                    android:background="@color/dynamic_light" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center"
                     android:layout_gravity="center"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/dynamic_light"
-                        android:text="Developed by"/>
+                        android:text="Developed by"
+                        android:textColor="@color/dynamic_light" />
 
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginVertical="16dp"
-                        app:srcCompat="@drawable/omkar_profile"/>
+                        app:srcCompat="@drawable/omkar_profile" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:textColor="@color/dynamic_light"
-                        android:text="Omkar Phadke"/>
+                        android:text="Omkar Phadke"
+                        android:textColor="@color/dynamic_light" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/githubButton"
-                            android:onClick="onContactButtonPress"
                             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:icon="@drawable/github"/>
+                            android:onClick="onContactButtonPress"
+                            app:icon="@drawable/github" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/linkedInButton"
-                            android:onClick="onContactButtonPress"
                             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:icon="@drawable/linkedin"/>
+                            android:onClick="onContactButtonPress"
+                            app:icon="@drawable/linkedin" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/discordButton"
-                            android:onClick="onContactButtonPress"
                             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:icon="@drawable/discord"/>
+                            android:onClick="onContactButtonPress"
+                            app:icon="@drawable/discord" />
 
                     </LinearLayout>
 
@@ -255,11 +266,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:text="Made with ❤️ in Pune, India"
                 android:textColor="@color/dynamic_light"
-                android:textSize="12sp"
-                android:text="Made with ❤️ in Pune, India"/>
+                android:textSize="12sp" />
 
         </LinearLayout>
 
