Updated page titles to rounded google font

--- a/app/src/main/res/layout/activity_strict_security_settings.xml
+++ b/app/src/main/res/layout/activity_strict_security_settings.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/strict_security_settings"
-        android:textSize="24sp"
+        style="@style/Theme.OFFicer.RoundedFont"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
