--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF7575</color>
     <color name="dynamic_light">#BBDEFB</color>
     <color name="dynamic_lighter">#D2E3F8</color>
     <color name="dynamic_secondary_light">#E1D2F8</color>
