1. Completed custom trigger implementation 2. Fixed home screen logo in dark mode

--- a/app/src/main/res/layout/activity_custom_trigger.xml
+++ b/app/src/main/res/layout/activity_custom_trigger.xml
@@ -12,25 +12,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="@string/set_custom_trigger"
+        android:text="@string/use_custom_trigger"
         style="@style/Theme.OFFicer.RoundedFont"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        style="@style/Theme.OFFicer.FatFont"
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:enabled="false"
-        app:icon="@drawable/save"
-        android:text="SAVE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -98,8 +84,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="16dp"
-                android:text="Choose a trigger from the options below:"
+                android:text="@string/choose_a_trigger_from_the_options_below"
                 android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentTriggerTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="8dp"
+                android:text="@string/current_trigger"/>
 
             <com.google.android.material.card.MaterialCardView
                 style="@style/Widget.Material3.CardView.Outlined"
@@ -167,6 +161,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:alpha="0.5"
                             android:layout_weight="1"
                             app:srcCompat="@drawable/blank_disc" />
 
@@ -192,5 +187,20 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        style="@style/Theme.OFFicer.FatFont"
+        android:id="@+id/saveFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        android:onClick="saveClicked"
+        android:enabled="false"
+        app:icon="@drawable/save"
+        android:text="@string/save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
