--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
     <style name="Theme.OFFicer.RoundedFont" parent="Theme.OFFicer">
         <item name="fontFamily">@font/google_sans_rounded_regular</item>
     </style>
+
+    <style name="Theme.OFFicer.FatFont" parent="Theme.OFFicer">
+        <item name="fontFamily">@font/bagel_fat_one_regular</item>
+    </style>
 </resources>
