--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             style="@style/Widget.Material3Expressive.Button.OutlinedButton"
             android:layout_marginEnd="16dp"
             app:icon="@drawable/diamond_cloud"
-            android:text="About"
+            android:text="@string/about_app"
+            android:onClick="onAboutButtonPress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -294,156 +295,6 @@
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/bottomLinearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:gravity="bottom"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="12dp">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="About"
-                            android:textSize="18sp" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:baselineAligned="false"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
-
-                                <com.google.android.material.imageview.ShapeableImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    app:srcCompat="@drawable/ic_launcher_foreground" />
-
-                                <TextView
-                                    android:id="@+id/versionTextButton"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:clickable="false"
-                                    android:text="1.0.0" />
-
-                                <com.google.android.material.button.MaterialButton
-                                    style="@style/Widget.Material3Expressive.Button.TextButton"
-                                    android:id="@+id/changelogButton"
-                                    android:layout_marginTop="8dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:onClick="onContactButtonPress"
-                                    android:text="Changelog" />
-
-                                <com.google.android.material.button.MaterialButton
-                                    style="@style/Widget.Material3Expressive.Button.TextButton"
-                                    android:id="@+id/sourcecodeButton"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:onClick="onContactButtonPress"
-                                    android:text="View Source Code" />
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginVertical="20dp"
-                                android:alpha="0.15"
-                                android:background="@color/foreground" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="@color/dynamic_light" />
-
-                                <com.google.android.material.imageview.ShapeableImageView
-                                    android:layout_width="75dp"
-                                    android:layout_height="75dp"
-                                    android:layout_marginVertical="16dp"
-                                    app:srcCompat="@drawable/omkar_profile" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="8dp"
-                                    android:text="Omkar Phadke" />
-
-                                <com.google.android.material.button.MaterialButtonGroup
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:spacing="2dp"
-                                    android:gravity="center" >
-
-                                    <com.google.android.material.button.MaterialButton
-                                        android:id="@+id/githubButton"
-                                        style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-
-                                        android:onClick="onContactButtonPress"
-                                        app:icon="@drawable/github" />
-
-                                    <com.google.android.material.button.MaterialButton
-                                        android:id="@+id/linkedInButton"
-                                        style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:onClick="onContactButtonPress"
-                                        app:icon="@drawable/linkedin" />
-
-                                    <com.google.android.material.button.MaterialButton
-                                        android:id="@+id/discordButton"
-                                        style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:onClick="onContactButtonPress"
-                                        app:icon="@drawable/discord" />
-
-                                </com.google.android.material.button.MaterialButtonGroup>
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-
-            </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
