--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -133,7 +133,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginVertical="16dp"
-                            android:text="Omkar Phadke" />
+                            android:text="@string/omkar_phadke" />
 
                         <com.google.android.material.button.MaterialButtonGroup
                             android:layout_width="wrap_content"
@@ -167,6 +167,12 @@
 
                         </com.google.android.material.button.MaterialButtonGroup>
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="16dp"
+                            android:text="@string/share_app_desc" />
+
                     </LinearLayout>
 
                     <ImageView
@@ -185,6 +191,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="16dp"
                 android:text="Other Links" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/shareAppButton"
+                style="@style/Widget.Material3Expressive.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onShareViaLinkClicked"
+                android:text="@string/share_via_link" />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.Material3Expressive.Button.TextButton"
