--- a/app/src/main/res/layout/activity_strict_security_settings.xml
+++ b/app/src/main/res/layout/activity_strict_security_settings.xml
@@ -87,15 +87,37 @@
                 android:textSize="16sp"
                 android:text="@string/set_timer_duration"/>
 
-            <com.google.android.material.slider.Slider
-                android:id="@+id/durationSlider"
-                style="@style/Widget.Material3.Slider"
+            <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Material3.CardView.Outlined"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:valueFrom="5"
-                android:value="15"
-                android:valueTo="60"
-                android:stepSize="5"/>
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <com.google.android.material.slider.Slider
+                        android:id="@+id/durationSlider"
+                        style="@style/Widget.Material3.Slider"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:valueFrom="5"
+                        android:value="15"
+                        android:valueTo="60"
+                        android:stepSize="5"/>
+
+                    <TextView
+                        android:id="@+id/strictSecurityDurationTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Duration:" />
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </LinearLayout>
     </ScrollView>
